# OTUS-CPP-Professional-HomeWork_12

./: 1.bat  CMakeLists.txt  Doxyfile  README.md  annotated.html  class_map_reduce_engine-members.html  class_map_reduce_engine.html  classes.html  classprefix_1_1_prefix_mapper-members.html  classprefix_1_1_prefix_mapper.html  classprefix_1_1_prefix_reducer-members.html  classprefix_1_1_prefix_reducer.html  classprefix__no__duplicates_1_1_prefix_mapper-members.html  classprefix__no__duplicates_1_1_prefix_mapper.html  classprefix__no__duplicates_1_1_prefix_reducer-members.html  classprefix__no__duplicates_1_1_prefix_reducer.html  classprefix__optimized_1_1_prefix_mapper-members.html  classprefix__optimized_1_1_prefix_mapper.html  classprefix__optimized_1_1_prefix_reducer-members.html  classprefix__optimized_1_1_prefix_reducer.html  dir_000002_000001.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  map__reduce__engine_8h.html  map__reduce__engine_8h__dep__incl.map  map__reduce__engine_8h__dep__incl.md5  map__reduce__engine_8h__incl.map  map__reduce__engine_8h__incl.md5  map__reduce__engine_8h_source.html  menudata.js  (+24 more)
.github/workflows/: release.yml
docs/: mainpage.h
include/: map_reduce_engine.h  prefix.h  prefix_no_duplicates.h  prefix_optimized.h
search/: all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js
source/: main.cpp
test/: test.cpp
test/data/: test1.txt  test2.txt  test3.txt  test4.txt
